--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gpscam",
+  "name": "video-streaming-server",
   "version": "1.0.0",
   "description": "",
-  "main": "firebaseConfig.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -23,10 +23,13 @@
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^4.17.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.4.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
