--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,23 @@
 {
-  "name": "Video Streaming App",
-  "short_name": "StreamApp",
+  "name": "GpsCam",
+  "short_name": "GpsCam",
+  "description": "A GPS and Camera tracking application",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "theme_color": "#1a73e8",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "/image.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/image.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 } 
